[package]
name = "harfbuzz-sys-test"
version = "0.1.0"
edition = "2021"

authors = ["Sean Leather <sean.leather@gmail.com>"]

build = "build.rs"

[dependencies]
harfbuzz-sys = { path = "../harfbuzz-sys" }
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
ctest = { package = "ctest2", version = "0.4" }
